tests/builtin_collision_const_allocator_bad.stderr
tests/builtin_collision_const_allocator_bad.hop:2:7: error: HOP2001: duplicate definition 'MemAllocator'
lib/builtin/mem_allocator.hop:1:12: hint: HOP2001: other declaration of 'MemAllocator'
